--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -1,11 +1,13 @@
 # Preferred name (Characters only)
 name: "Michael Adebayo"
 # Your GitHub repo root URL
-github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_demo
+github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_MichaelAdebayo
+
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis a orci ac malesuada. Vivamus ligula elit, viverra eu ante porttitor, blandit convallis augue. Aliquam justo justo, mollis at lacus eu, rutrum finibus est. Vestibulum venenatis purus id accumsan pretium. In efficitur magna nec enim laoreet tincidunt. Ut libero metus, scelerisque nec eros vitae, sagittis pellentesque enim. Donec dictum felis volutpat, vehicula magna eu, imperdiet elit. Phasellus ut velit a massa efficitur faucibus. Sed volutpat, lacus sed sagittis luctus, elit.
+summary: My name is Michael Adebayo. I hold a Bachelor of Science Honors degree in Computer Science from Trent University. My professional journey began as a Performance Test Analyst at CIBC where I tested the performance of applications, and I am currently employed at Jarvis as a Junior Software Engineer. What excites me about the software industry is its constant evolution and the immense potential it offers to achieve unimaginable things. I am particularly passionate about artificial intelligence and big data and what it can bring for us as a people, and I am eager to explore the possibilities these fields present.
+
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -13,38 +15,39 @@ skills:
   # At least 5 skills
   proficient:
     - Java
-    - Linux/Bash
+    - IntelliJ
     - RDBMS/SQL
     - Agile/Scrum
     - Git
   # At least 5 skills
   competent:
-    - Donec
-    - fermentum
-    - Donec
-    - fermentum
-    - Donec
+    - Python
+    - C#
+    - Docker
+    - Linux
+    - Bash
   # At least 5 skills
   familiar:
-    - Donec
-    - fermentum
-    - fermentum
-    - fermentum
-    - fermentum
+    - HTML
+    - CSS
+    - Rust
+    - C++
+    - Springboot
+
 
 # List of Jarvis projects
 jarvis_projects:
   - name: "Cluster Monitor"
-    git_url: "/linux_sql"
+    git_url: https://github.com/jarviscanada/jarvis_data_eng_MichaelAdebayo/blob/main/linux_sql
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+    description: Worked on a project that has the goal of creating scripts that will be able to collect hardware data and resource usage data, that will enable the Jarvis Linux Cluster Administration to determine how they can properly manage resources from a cluster.
   - name: "Core Java Apps"
-    git_url: "/core_java"
+    git_url: https://github.com/jarviscanada/jarvis_data_eng_MichaelAdebayo/blob/main/core_java
     description:
       - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
       - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+      - "Grep App: Coded an application with that has the purpose to mimic the Linux grep command that will allow for the use of searching matching strings from files using expressions."
   - name: "Springboot App"
     git_url: "/springboot"
     description: ""
@@ -61,19 +64,19 @@ jarvis_projects:
     git_url: "/cloud_devops"
     description: ""
 
+
 # List of personal or academic projects
 # Feel free to add more projects
 highlighted_projects:
-    #project name
-  - name: "Web app for resturant"
+  #project name
+  - name: "Pokemon Trainer Game"
     #URL is optional
-    git_url: "https://github.com/jarviscanada/jarvis_profile_builder"
+    git_url: "https://github.com/MichaelAdebayo/Pokemon_Project"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-  - name: "Machine Learning"
-    git_url:
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-
+    description: Programmed a a simple text-based game where you, as a Pokemon Trainer, can select a Pokemon type, battle against computer opponents, and level up your Pokemon.
+  - name: "Dental Practice Web Application"
+    git_url: https://github.com/MichaelAdebayo/SchoolProject
+    description: Collaborated with classmates to help develop a web application that allows end-users to log in to the web application dashboard, pulls data from the existing client database, guides users in cleaning the exported data, and provides documentation on how to use the app, as well as gives end-users access to look at data.
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
 #The description must be more than 25 words. If your experience is not software related, please focus on soft skills and achievements (e.g. team collaboration, problem-solving, improvements, communication).
@@ -81,38 +84,38 @@ professional_experience:
   #Write your Jarvis role as a professional experience rather than training.
   - title: "Software Developer"
     company: "Jarvis"
-    duration: "2020-present"
+    duration: "2024-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Donec mattis sed justo et sagittis. Vestibulum lacinia nulla ipsum. Curabitur imperdiet nibh vitae leo lacinia laoreet. Nullam accumsan, lectus ut maximus ultricies, augue justo egestas mi, vel bibendum felis."
-  - title: "Tutor"
-    company: "XYZ Company"
-    duration: "2019"
-    description: "Donec mattis sed justo et sagittis. Vestibulum lacinia nulla ipsum. Curabitur imperdiet nibh vitae leo lacinia laoreet. Nullam accumsan, lectus ut maximus ultricies, augue justo egestas mi, vel bibendum felis."
+    description: "Responsible for assisting in the development, testing, and maintenance of software applications. As well as training with trainers to increase my skill."
+  - title: "Performance Test Analyst"
+    company: "Canadian Imperial Bank of Commerce"
+    duration: "2022 - 2023"
+    description: "Conduct performance testing and analysis on software systems to identify and resolve performance bottlenecks."
+
+
+
 
 #List of edcuation
-education: 
-  - school_name: "XYZ university"
-    duration: "2012-2016"
-    degree: "Bachelor of Applied Sciences"
-    department: "Electrical and Computer Engineering"
+education:
+  - school_name: "Trent University"
+    duration: "2018-2023"
+    degree: "Bachelor of Science in Honours"
+    department: "Computer Science"
     # optional
-    awards_achievements: 
-      - "Scholarship"
-      - "Dean's List (2015, 2016): Ut enim ad minim veniam"
-      - "GPA: 3.8/4.0"
-  - school_name: "XYZ university"
-    duration: "2016-2018"
-    degree: "Master of Engineering"
-    department: "Electrical and Computer Engineering"
-    awards_achievements: 
+    awards_achievements:
+      - "Academic Good Standing (2018 - 2023)"
+
 
 #Optional section
 others:
-    #category
+  #category
   - title: "Certificates"
     #list of items
     bullets:
-      - "Udacity Machine Learning (2019)"
+      - "Skill Hat Career Accelerator Course (2022 - 2023)"
+      - "CompTIA IT Fundamentals (2022)"
+      - "Microsoft Azure Fundamentals: Cloud Computing (2023)"
+      - "Introduction to Cloud (2023)"
   - title: "Awards"
     bullets:
       - "Winner"
@@ -120,4 +123,4 @@ others:
     bullets:
       - "Basketball player"
       - "Competitive gaming"
-      - "Volunteer, ABC Food bank: Ut enim ad minim veniam"
+      - "Book-club member"
