--- a/core_java/jdbc/pom.xml
+++ b/core_java/jdbc/pom.xml
@@ -31,6 +31,18 @@
             <version>2.16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 </project>
