--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -19,7 +19,9 @@ skills:
     - MySQL
     - Databricks
     - CompTIA IT Fundamentals
+    - PySpark
   familiar:
+    - Kafka
     - HTML
     - Databricks - Apache Spark
     - CSS
